MOVED: index.js to server folder ADDED: script in package.json ADDED: readme.md

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "node index.js"
+    "start": "next start",
+    "serve": "nodemon server"
   },
   "author": "Marviuz",
   "license": "MIT",
