--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A simple react chat application",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server/index.js -p $PORT",
     "build": "next build",
-    "start": "node server",
-    "serve": "nodemon server"
+    "heroku-postbuild": "next build",
+    "start": "node server/index.js -p $PORT"
   },
   "author": "Marviuz",
   "license": "MIT",
