--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "A simple react chat application",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js -p $PORT",
+    "dev": "node server.js",
     "build": "next build",
     "heroku-postbuild": "next build",
-    "start": "node server.js -p $PORT"
+    "start": "node server.js"
   },
   "author": "Marviuz",
   "license": "MIT",
   "dependencies": {
     "@zeit/next-sass": "^0.2.0",
     "express": "^4.16.3",
+    "firebase": "^5.4.0",
     "next": "^6.1.1",
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
