--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-linkify": "^0.2.2",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
