--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-chatingo",
-  "version": "0.2.7",
+  "version": "0.3.0",
   "description": "A simple react chat application",
   "main": "server.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-dropzone": "^5.0.1",
     "react-linkify": "^0.2.2",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
