--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-chatingo",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A simple react chat application",
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
+    "prod": "next build && node -r dotenv/config server.js",
     "build": "next build",
     "heroku-postbuild": "next build",
     "start": "node server.js"
@@ -26,6 +27,7 @@
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "nodemon": "^1.18.3"
   },
   "repository": {
