--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-chatingo",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "A simple react chat application",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "prod": "next build && node -r dotenv/config server.js",
     "build": "next build",
     "heroku-postbuild": "next build",
@@ -16,6 +16,7 @@
     "@zeit/next-sass": "^0.2.0",
     "express": "^4.16.3",
     "firebase": "^5.4.0",
+    "imgur": "^0.2.1",
     "moment": "^2.22.2",
     "next": "^6.1.1",
     "node-sass": "^4.9.3",
